--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProyeccionDeGastos/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿
 @{
-    ViewBag.Title = "Proyección de gastos personales";
+    ViewBag.Title = "Proyeccioón de gastos personales";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
+    Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
-
+<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
 @using (Html.BeginForm())
 {
