--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/Anular.cshtml
@@ -167,7 +167,7 @@
 
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","Prestamos",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
 
