--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/Anular.cshtml
@@ -12,6 +12,7 @@
 {
     @Html.HiddenFor(q => q.IdOrdenCompra_ext)
     @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
     <div class="row">
         <div class="col-md-12">
