--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Revision/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Revision/Index.cshtml
@@ -128,7 +128,7 @@
                     }).Bind(ViewBag.Report_s).GetHtml()
                 </div>
 
-                <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_listado">
+                <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_listado">
 
                     @Html.DevExpress().WebDocumentViewer(settings =>
                     {
