--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_composicion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_CmbProducto_composicion.cshtml
@@ -14,6 +14,7 @@
         settings.Properties.TextFormatString = "[{1}] {2}";
         settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.Columns.Add("IdProducto", "ID", 5);
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
