--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProductoPadre_Inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProductoPadre_Inventario.cshtml
@@ -14,6 +14,7 @@
         settings.Properties.ValueType = typeof(decimal);
         settings.Properties.TextField = "pr_descripcion";
         settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s, e) { IdProducto.PerformCallback(); IdProducto.SetValue(''); }";
 
