--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbCliente_Guia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbCliente_Guia.cshtml
@@ -13,6 +13,8 @@
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.FilterMinLength = 3;
+
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);
