--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/_CmbPersona_Banco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/BancoReportes/_CmbPersona_Banco.cshtml
@@ -14,6 +14,7 @@
         settings.Properties.TextFormatString = "[{0}] {1} {2}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
