--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/_CmbProductoHijo_Facturacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/_CmbProductoHijo_Facturacion.cshtml
@@ -14,6 +14,7 @@
         settings.Properties.ValueType = typeof(decimal);
         settings.Properties.TextField = "pr_descripcion";
         settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdProductoPadre'] = IdProductoPadre.GetValue(); }";
 
